--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>thekaushikgoswami | portfolio</title>
+    <title>CyberTacticsForge | nonprofit</title>
     <link rel="icon" type="image" href="./assets/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
@@ -37,10 +37,10 @@
         <h1>kaushik.</h1>
         <h2>Developer / Graphic Designer / Human</h2>
         <div id="menu">
-            <a onclick="showabout()">about</a>
-            <a onclick="showwork()">work</a>
+            <a onclick="showabout()">who we are</a>
+            <a onclick="showwork()">mission & vision</a>
             <a onclick="showcontact()">contact</a>
-            <a onclick="showprojects()">projects</a>
+            <a onclick="showprojects()">what we do</a>
         </div>
         <table>
             <tr>
