--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="box2 onlywide animated bounceOutRight" style="animation-delay: 1800ms;"></div>
         <div class="box2 onlywide animated bounceOutRight" style="animation-delay: 1700ms;"></div>
     </div>
-    <a id="about" onclick="showabout()" class="animated fadeIn" style="animation-delay: 1000ms;">about</a>
-    <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay: 1000ms;">work</a>
+    <a id="about" onclick="showabout()" class="animated fadeIn" style="animation-delay: 1000ms;">who we are</a>
+    <a id="work" onclick="showwork()" class="animated fadeIn" style="animation-delay: 1000ms;">mission & vision</a>
     <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay: 1000ms;">contact</a>
-    <a id="projects" onclick="showprojects()" class="animated fadeIn" style="animation-delay: 1000ms;">projects</a>
+    <a id="projects" onclick="showprojects()" class="animated fadeIn" style="animation-delay: 1000ms;">what we do</a>
     <div id="middle" class="animated slideInDown" style="animation-delay: 2000ms;">
         <h1>kaushik.</h1>
         <h2>Developer / Graphic Designer / Human</h2>
@@ -105,7 +105,7 @@
     </div>
     <div id="work_container" class="container">
         <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
-        <h1>work.</h1>
+        <h1>mission & vision</h1>
         <section>
             <h2></h2>
             <p>
