--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <a id="contact" onclick="showcontact()" class="animated fadeIn" style="animation-delay: 1000ms;">contact</a>
     <a id="projects" onclick="showprojects()" class="animated fadeIn" style="animation-delay: 1000ms;">what we do</a>
     <div id="middle" class="animated slideInDown" style="animation-delay: 2000ms;">
-        <h1>kaushik.</h1>
-        <h2>Developer / Graphic Designer / Human</h2>
+        <h1>CyberTacticsForge</h1>
+        <h2>enrich / explore / empower</h2>
+        <h3>a nonprofit focused on future cybersecurity professionals</h3>
         <div id="menu">
             <a onclick="showabout()">who we are</a>
             <a onclick="showwork()">mission & vision</a>
