--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 </head>
 
 <body>
+    <div class="slideshow">
+        <img src="assets/8ball_table.jpg" alt="8ball">
+        <img src="assets/Cartographer_map.png" alt="Cartographer">
+        <img src="assets/GhostofLAN.png" alt="LANgeist">
+        <img src="assets/Hash-Hound.png" alt="Hash Hound">
+        <img src="assets/Malchemist.jpg" alt="Malchemist">
+        <img src="assets/Ms_Disin.jpg" alt="Ms. Disin">
+        <img src="assets/SSHerlock.png" alt="SSHerlock">
+    </div>
     <div id="loading">
         <div id="spinner"></div>
     </div>
