--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <h1>CyberTacticsForge</h1>
         <h2>enrich / explore / empower</h2>
         <h3>a nonprofit focused on future cybersecurity professionals</h3>
+        <h3>info@cybertacticsforge.org</h3>
         <div id="menu">
             <a onclick="showabout()">who we are</a>
             <a onclick="showwork()">mission & vision</a>
