--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <img src="assets/Ms_Disin.jpg" alt="Ms. Disin">
         <img src="assets/SSHerlock.png" alt="SSHerlock">
     </div>
+    <div class="overlay"></div>
     <div id="loading">
         <div id="spinner"></div>
     </div>
