--- a/index.html
+++ b/index.html
@@ -119,14 +119,19 @@
         <div onclick="closework()"><i class="fas fa-angle-right"></i></div>
         <h1>mission & vision</h1>
         <section>
-            <h2></h2>
+            <h2>mission</h2>
             <p>
-                Welcome! I'm Kaushik Goswami, a passionate professional specializing in Web Designing, Python
-                Programming, Graphic Designing, and Content Writing. With 2 years of personal experience, I bring fresh
-                and innovative solutions to every project. From visually appealing websites to efficient Python programs
-                and captivating graphics, I deliver high-quality work that exceeds expectations. Let's collaborate and
-                create remarkable digital experiences. Explore my LinkedIn page for samples and connect to discuss your
-                project.
+                CyberTacticsForge exists to transform natural curiosity and competitive spirit into recognized
+                talent and lasting opportunity. We foster cybersecurity teams, sharpen their skills with real-
+                world offensive and defensive techniques, and grow their potential through strategic challenges,
+                mentorship, and competition within a structured, supportive environment.
+            </p>
+            <h2>vision</h2>
+            <p>
+                Our vision is to cultivate strategic, ethical minds who recognize the power of their skills, the
+                responsibility of their actions, and the impact they can have in securing tomorrow’s world while
+                forging a community that grows through mentorship, sharpens through competition, and
+                where students are prepared to anticipate and outmaneuver threats.
             </p>
             <div id="used">
                 <div><i class="fas fa-circle"></i>&nbsp;Web Designing</div>
