--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     </div>
     <div id="projects_container" class="container">
         <div onclick="closeprojects()"><i class="fas fa-angle-right"></i></div>
-        <h1>projects.</h1>
+        <h1>what we do.</h1>
         <section>
-            <h2>my work</h2>
+            <h2>pps{CyberTacticsFest}</h2>
             <p>
-                Here are some of the projects I've worked on recently. Feel free to explore:
+                The pps{CyberTacticsFest} is the flagship event focused on offensive and defensive cyber operations:
             </p>
             <ul>
                 <div class="project_card">
