--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1>CyberTacticsForge</h1>
         <h2>enrich / explore / empower</h2>
         <h3>a nonprofit focused on future cybersecurity professionals</h3>
-        <h3>info@cybertacticsforge.org</h3>
+        <h3><a href="mailto:info@cybertacticsforge.org" style="color: inherit; text-decoration: none;">info@cybertacticsforge.org</a></h3>
         <div id="menu">
             <a onclick="showwhoweare()">who we are</a>
             <a onclick="showmissionvision()">mission & vision</a>
