--- a/index.html
+++ b/index.html
@@ -54,12 +54,6 @@
             <a onclick="showgetinvolved()">get involved</a>
             <a onclick="showwhatwedo()">what we do</a>
         </div>
-        <table>
-            <tr>
-                <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"
-                        href="https://jboyce1.github.io/ppsCTF"><i class="fab fa-github"></i></a></td>
-            </tr>
-        </table>
     </div>
     <div id="whatwedo_container" class="container">
         <div onclick="closewhatwedo()"><i class="fas fa-angle-right"></i></div>
@@ -74,6 +68,11 @@
             <h2>The pps{CyberTacticsFest} Competition</h2>
             <p>
                 Our flagship event, the pps{CyberTacticsFest}, is more than just a competition; it’s a capstone experience built on a season of hands-on training. We move beyond theory by giving students real tools to solve real problems in a competitive, team-based environment. Participants learn offensive and defensive techniques through weekly training, mentorship, and mini-challenges, ensuring that every skill used in the final event has been transparently taught and practiced. This approach builds confidence, fosters teamwork, and makes cybersecurity accessible to all students, regardless of their background.
+            </p>
+            <p style="text-align: center; margin-top: 40px;">
+                <a class="social" href="https://jboyce1.github.io/ppsCTF" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-github"></i> View the Project on GitHub
+                </a>
             </p>
         </section>
         <section>
