--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
         <div onclick="closewhoweare()"><i class="fas fa-angle-left"></i></div>
         <h1>who we are.</h1>
         <section>
-            <h2>executive director: jacob boyce</h2>
+            <h2>executive director:</h2>
+                <h3>jacob boyce</h3>
             <p>
                 A veteran teacher of Pittsburgh Public Schools and an Intelligence Analyst and Cyber Operations Specialist
                with the U.S. Army Reserve. Mr. Boyce found a unmet need in cybersecurity among secondary students in the 
@@ -128,7 +129,7 @@
             </p>
             <h3>board secretary: glen ponas</h3>
             <p>
-                A longtime educator at PPS and executive director at Aerium, Mr. Ponas brings a wealth of knowlege in pedagogy, non-profit operations, and real world experiance.
+                As a retired Teacher at Pittsburgh Public Schools, Glen brings a nuanced and thorough understanding of both how to work with school administration without sacraficing student experiance. As the Executive Director of Aerium, a Pennsylvania-based 501c3, Glen lead the team's efforts to accelerate the commercialization of next-generation AAM, UAS, and crewed aircraft technologies and to build and grow the workforce that will build, fly, and maintain them.
             </p>
             <h3>board treasurer: jonathan miller</h3>
             <p>
