--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a id="getinvolved" onclick="showgetinvolved()" class="animated fadeIn" style="animation-delay: 1000ms;">get involved</a>
     <a id="whatwedo" onclick="showwhatwedo()" class="animated fadeIn" style="animation-delay: 1000ms;">what we do</a>
     <div id="middle" class="animated slideInDown" style="animation-delay: 2000ms;">
-        <h1>CyberTacticsForge</h1>
+        <h1>Cyber<wbr>Tactics<wbr>Forge</h1>
         <h2>enrich / explore / empower</h2>
         <h3>a nonprofit focused on future cybersecurity professionals</h3>
         <h3><a href="mailto:info@cybertacticsforge.org" style="color: inherit; text-decoration: none;">info@cybertacticsforge.org</a></h3>
@@ -111,8 +111,8 @@
         <div onclick="closewhoweare()"><i class="fas fa-angle-left"></i></div>
         <h1>who we are.</h1>
         <section>
-            <h2>executive director:</h2>
-                <h3>jacob boyce</h3>
+            <h2>executive director:</h2> 
+            <h3>jacob boyce</h3>
             <p>
                 A veteran teacher of Pittsburgh Public Schools and an Intelligence Analyst and Cyber Operations Specialist
                with the U.S. Army Reserve. Mr. Boyce found a unmet need in cybersecurity among secondary students in the 
@@ -162,9 +162,6 @@
                 As a developer, you will assist in creating the final competition scenario, which involves a fictional school where something mysterious is happening. This requires developing target machines and crafting scenarios that test a broad range of skills. Alternatively, you may help develop capabilities to monitor the competition, such as integrating CTFd for flag submission, implementing SecOnion for automatic scoring, or creating a live scoreboard and broadcast.
             </p>
         </section>
-    </div>
-    <div id="footer">
-        made with ❤️ in pittsburgh <br> <a href="https://www.pittsburghpa.gov/Home">pittsburghpa.gov</a>
     </div>
     <script src="index.js" type="text/javascript"></script>
     <script src="particles.js"></script>
