--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
             <p>
                 A graduate form Carnegie Mellon University, Taylor was instramental in assisting to connections between grad students and the pps{CyberTacticsFest}
             </p>
-            <h3>board secretary: glen ponas</h3>
+            <h3>board secretary: glenn ponas</h3>
             <p>
-                As a retired Teacher at Pittsburgh Public Schools, Glen brings a nuanced and thorough understanding of both how to work with school administration without sacraficing student experiance. As the Executive Director of Aerium, a Pennsylvania-based 501c3, Glen lead the team's efforts to accelerate the commercialization of next-generation AAM, UAS, and crewed aircraft technologies and to build and grow the workforce that will build, fly, and maintain them.
+                As a retired Teacher at Pittsburgh Public Schools, Glenn brings a nuanced and thorough understanding of both how to work with school administration without sacraficing student experiance. As the Executive Director of Aerium, a Pennsylvania-based 501c3, Glen lead the team's efforts to accelerate the commercialization of next-generation AAM, UAS, and crewed aircraft technologies and to build and grow the workforce that will build, fly, and maintain them.
             </p>
             <h3>board treasurer: jonathan miller</h3>
             <p>
-                A master host analyst and cyber warfare operations specialist in the US Army Reserve as well as a full time network defender, Mr. Miller has the experiance to 
+                A master host analyst and cyber operations specialist in the US Army Reserve as well as a full time network defender, Mr. Miller has the experiance to 
                 guide the direction of the CyberTacticsForge to ensure relevant and marketable skills for participants.
             </p>
         </section>
