--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                 local cybersecuirty talent in Pittsburgh and assist teachers across the county in doing the same in their area.
             </p>
             <h2>board members:</h2>
-            <h3>board chair: talor mccampbell</h3>
+            <h3>board chair: taylor mccampbell</h3>
             <p>
-                A graduate form Carnegie Mellon University, Taylor was instramental in assisting to connections between grad students and the pps{CyberTacticsFest}
+                A graduate form Carnegie Mellon University, Taylor was instramental in assisting to connections between grad students and the pps{CyberTacticsFest}.
             </p>
             <h3>board secretary: glenn ponas</h3>
             <p>
