--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div onclick="closewhatwedo()"><i class="fas fa-angle-right"></i></div>
         <h1>what we do.</h1>
         <section>
-            <h2>Forging the Next Generation of Cyber Defenders</h2>
+            <h2>Forging Future Cyber Operators</h2>
             <p>
                 CyberTacticsForge is dedicated to closing the critical gap in practical cybersecurity education. We provide students with authentic, hands-on experiences that transform curiosity into career-ready skills. Our work is focused on two primary initiatives: running a flagship regional competition and empowering educators to build similar programs in their own communities.
             </p>
@@ -125,16 +125,15 @@
             <h2>board members:</h2>
             <h3>board chair: taylor mccampbell</h3>
             <p>
-                A graduate form Carnegie Mellon University, Taylor was instramental in assisting to connections between grad students and the pps{CyberTacticsFest}.
+                A graduate of Carnegie Mellon University, Taylor McCampbell serves as the Board Chair for CyberTacticsForge. As a lead contributor and challenge author for picoCTF, he has been instrumental in connecting graduate students and educators with the pps{CyberTacticsFest}. His research at Carnegie Mellon’s CyLab focuses on lowering barriers for K–12 teachers to integrate cybersecurity education into their classrooms, aligning directly with CyberTacticsForge’s mission to expand access to hands-on cybersecurity learning. Taylor’s curiosity, mentorship, and commitment to authentic engagement continue to shape the organization’s growth and impact.
             </p>
             <h3>board secretary: glenn ponas</h3>
             <p>
-                As a retired Teacher at Pittsburgh Public Schools, Glenn brings a nuanced and thorough understanding of both how to work with school administration without sacraficing student experiance. As the Executive Director of Aerium, a Pennsylvania-based 501c3, Glen lead the team's efforts to accelerate the commercialization of next-generation AAM, UAS, and crewed aircraft technologies and to build and grow the workforce that will build, fly, and maintain them.
+                As a retired teacher with Pittsburgh Public Schools, Glenn brings a nuanced and practical understanding of how to collaborate effectively with school administration while maintaining a strong focus on student experience. With extensive experience in workforce development and education-to-industry pipelines, Glenn explores and expands opportunities for students to gain applicable, real-world experience. As the Executive Director of Aerium, a Pennsylvania-based 501(c)(3), he leads efforts to accelerate the commercialization of next-generation AAM, UAS, and crewed aircraft technologies—and to develop the workforce that will build, operate, and sustain them.
             </p>
-            <h3>board treasurer: jonathan miller</h3>
+            <h3>board treasurer: johnathan miller</h3>
             <p>
-                A master host analyst and cyber operations specialist in the US Army Reserve as well as a full time network defender, Mr. Miller has the experiance to 
-                guide the direction of the CyberTacticsForge to ensure relevant and marketable skills for participants.
+                A Master Host Analyst and Cyber Operations Specialist in the U.S. Army Reserve, Mr. Miller brings extensive real-world expertise to CyberTacticsForge. As a full-time network defender with experience as a Director of Information, Threat Hunter, and Information Security Manager, he ensures that CyberTacticsForge provides participants with relevant, industry-aligned, and marketable skills. His leadership helps maintain the organization’s focus on delivering authentic, hands-on experiences that reflect the current demands of the cybersecurity field.
             </p>
         </section>
     </div>
