--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h2>board members:</h2>
             <h3>board chair: taylor mccampbell</h3>
             <p>
-                A graduate of Carnegie Mellon University, Taylor McCampbell serves as the Board Chair for CyberTacticsForge. As a lead contributor and challenge author for picoCTF, he has been instrumental in connecting graduate students and educators with the pps{CyberTacticsFest}. His research at Carnegie Mellon’s CyLab focuses on lowering barriers for K–12 teachers to integrate cybersecurity education into their classrooms, aligning directly with CyberTacticsForge’s mission to expand access to hands-on cybersecurity learning. Taylor’s curiosity, mentorship, and commitment to authentic engagement continue to shape the organization’s growth and impact.
+                A graduate of Carnegie Mellon University, Taylor McCampbell serves as the Board Chair for CyberTacticsForge. As a lead coordinator and challenge author for picoCTF, he has been instrumental in connecting graduate students and educators with the pps{CyberTacticsFest}. His research at Carnegie Mellon’s CyLab focuses on lowering barriers for K–12 teachers to integrate cybersecurity education into their classrooms, aligning directly with CyberTacticsForge’s mission to expand access to hands-on cybersecurity learning. Taylor’s curiosity, mentorship, and commitment to authentic engagement continue to shape the organization’s growth and impact.
             </p>
             <h3>board secretary: glenn ponas</h3>
             <p>
@@ -134,6 +134,15 @@
             <h3>board treasurer: johnathan miller</h3>
             <p>
                 A Master Host Analyst and Cyber Operations Specialist in the U.S. Army Reserve, Mr. Miller brings extensive real-world expertise to CyberTacticsForge. As a full-time network defender with experience as a Director of Information, Threat Hunter, and Information Security Manager, he ensures that CyberTacticsForge provides participants with relevant, industry-aligned, and marketable skills. His leadership helps maintain the organization’s focus on delivering authentic, hands-on experiences that reflect the current demands of the cybersecurity field.
+            </p>
+            <h2>volunteers:</h2>
+            <h3>tanishka deshpande</h3>
+            <p>
+               A graduate student in Computer Science at the University of Pittsburgh, Tanishka brings experience from her software engineering work with Vertex Inc., Red Hat, and Razorpay to her role with CyberTacticsForge. Methodical and forward-thinking in her approach, she serves as a mentor helping to shape the defensive work roles for the upcoming pps{CyberTacticsFest}. Tanishka is developing structure, integration, and presentation of defensive challenges. She is passionate about ensuring students not only gain practical, industry-relevant skills, but also a clear understanding of how defense fits into the larger cybersecurity landscape.
+            </p>
+            <h3>mintas ivaska</h3>
+            <p>
+              A cybersecurity student at Robert Morris University, Mintas is tackling the wireless and radio-frequency defense components of the upcoming pps{CyberTacticsFest}. Methodical, communicative, and highly self-motivated, he has been instrumental in shaping how wireless defense work roles will appear in the final competition, from technical design to student-facing presentation. Mintas currently trains with the same toolset used in the event and has also supported outreach efforts, helping to bring new partners such as the Western Area Career & Technology Center into the CyberTacticsForge community. His enthusiasm for hands-on learning and his interest in developing a future UAS hacking competition reflect his growing leadership in the field of cybersecurity education.
             </p>
         </section>
     </div>
