--- a/TRETC/index.html
+++ b/TRETC/index.html
@@ -116,8 +116,9 @@
     <h2>Part A — Ubuntu VM (Target)</h2>
     <ol>
       <li>Login to <strong>apps.cyber.org</strong>.</li>
-      <li>Go to the <strong>Ubuntu Virtual Machine</strong>.</li>
-      <li>On the desktop, <strong>left-click</strong> and select <strong>“Open in Terminal”</strong>.</li>
+      <li>Launch both <strong>Ubuntu Linux and Kali Linux</strong>.</li>
+      <li>Connect to <strong>Ubuntu Linux</strong>.</li>
+      <li>On the desktop, <strong>left-click</strong> and select <strong>“Open Terminal Here”</strong>.</li>
       <li>
         Write down the IP address after the <code>@</code> symbol.
         Example: <span class="ip">10.15.81.150</span>
